# dspy-game-box

./: .gitignore  ARCHITECTURE.md  MANUS_DATA_RETRIEVAL.md
docs/: index.html  style.css
gamesage/: README.md  config.py  main.py  pyproject.toml
gamesage/core/: adapter.py  explainer.py  serializer.py
gamesage/data/: loader.py  metric.py  optimize.py  process_raw.py
gamesage/games/checkers/: adapter.py  engine.py  renderer.py
gamesage/games/chess/: adapter.py  engine.py  renderer.py
gamesage/games/go/: adapter.py  engine.py  renderer.py
gamesage/games/othello/: adapter.py  engine.py  renderer.py
gamesage/games/sudoku/: adapter.py  engine.py  renderer.py
gamesage/research/: logger.py
gamesage/tests/: conftest.py  test_checkers.py  test_chess.py  test_go.py  test_research_logger.py  test_sudoku.py
gamesage/ui/: cli.py
gamesage_data/: README.md  checkers_positions.jsonl  chess_puzzles.jsonl  go_positions.jsonl  othello_positions.jsonl  sudoku_techniques.jsonl
gamesage_data/compiled/: all_bootstrap_advisor.json  all_bootstrap_results.json  chess_bootstrap_advisor.json  chess_bootstrap_results.json  chess_mipro_advisor.json  chess_mipro_results.json  go_mipro_advisor.json  go_mipro_results.json  othello_bootstrap_advisor.json  othello_bootstrap_results.json  othello_mipro_advisor.json  othello_mipro_results.json
gamesage_data/processed/: checkers_examples.jsonl  chess_examples.jsonl  go_examples.jsonl  othello_examples.jsonl
