[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gamesage"
version = "0.1.0"
description = "AI-powered board game advisor using DSPy"
requires-python = ">=3.11"
dependencies = [
    "dspy-ai>=2.5",
    "python-chess>=1.10",
    "rich>=13.0",
    "sgfmill>=1.1",
    "numpy>=1.26",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
gamesage = "gamesage.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
